--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.GuidedLab"
         tools:targetApi="31">
         <activity
+            android:name=".Summary"
+            android:exported="false" />
+        <activity
+            android:name=".ChooseClass"
+            android:exported="false" />
+        <activity
+            android:name=".MainClassList"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
